Syncs some adjustments from pokecube plus findings
Adds support for more molang types
Adjusts support for certain loop animations
Improves performance for the random texture type